@@ -25,31 +25,31 @@
 	</rule>
 	<rule	Name="UsingStringLengthInsteadOfCheckingEmptyStringRule" 
 		Type="Gendarme.Rules.Performance.UsingStringLengthInsteadOfCheckingEmptyStringRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="" >
+		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#UsingStringLengthInsteadOfCheckingEmptyStringRule">
 		<problem>The method '{0}' compares the empty string by using Equals ("").</problem>
 		<solution>use String.Length instead.</solution>
 	</rule>
 	<rule	Name="AvoidUninstantiatedInternalClassesRule" 
 		Type="Gendarme.Rules.Performance.AvoidUninstantiatedInternalClassesRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="" >
+		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#AvoidUninstantiatedInternalClassesRule">
 		<problem>The internal type '{0}' is not instantiated by code within the assembly.</problem>
 		<solution>Remove the type or add the code that uses it.  If the type contains only static methods then either add the static modifier to the type or add the private construtor to the type to prevent the compiler from emitting a default public instance constructor.</solution>
 	</rule>
 	<rule	Name="AvoidUncalledPrivateCodeRule" 
 		Type="Gendarme.Rules.Performance.AvoidUncalledPrivateCodeRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="" >
+		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#AvoidUncalledPrivateCodeRule">
 		<problem>A private or internal (assembly-level) member '{0}' does not have callers in the assembly, is not invoked by the common language runtime, and the member is not invoked by a delegate.</problem>
 		<solution>Remove the non-callable code or add the code that calls it.</solution>
 	</rule>
 	<rule	Name="AvoidToStringOnStringsRule"
 		Type="Gendarme.Rules.Performance.AvoidToStringOnStringsRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="">
+		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#AvoidToStringOnStringsRule">
 		<problem>You are calling ToString () in a string in the member '{0}', this is redundant and may produce some performance penalities.</a>
 		<solution>You should remove the ToString () call.</solution>
 	</rule>
 	<rule	Name="DontIgnoreMethodResultRule"
 		Type="Gendarme.Rules.Performance.DontIgnoreMethodResultRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="">
+		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#DontIgnoreMethodResultRule">
 		<problem>The member '{0}' ignores the result from the call.</problem>
 		<solution>You shouldn't ignore this result.</solution>
 	</rule>
